Fix comment form buttons text wrapping

--- a/source/wp-content/themes/wporg-developer-2023/src/code-comment-edit/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/code-comment-edit/style.scss
@@ -14,84 +14,5 @@
 			padding-top: var(--wp--preset--spacing--30);
 		}
 	}
-
-	.comment-form {
-		position: relative;
-	}
-
-	.tablist {
-		display: flex;
-		gap: var(--wp--preset--spacing--10);
-		margin: 0;
-		padding: var(--wp--preset--spacing--10);
-		list-style: none;
-		z-index: 1;
-		top: 0;
-		right: 0;
-
-		li {
-			width: 50px;
-		}
-
-		a {
-			color: var(--wp--preset--color--charcoal-1);
-
-			&[aria-selected="true"] {
-				font-weight: 700;
-			}
-		}
-	}
-
-	.tab-section:not(.comment-preview) {
-		margin-top: 0;
-		padding: 0;
-		border: none;
-	}
-
-	.tab-section[aria-hidden="true"] {
-		display: none;
-	}
-
-	.tab-section:focus {
-		background: #eee;
-		outline: thin dotted;
-	}
-
-	.wp-editor-container,
-	.comment-preview {
-		border: 1px solid #dcdcde;
-	}
-
-	.wp-editor-area,
-	.comment-preview {
-		padding: var(--wp--preset--spacing--10);
-	}
-
-	.preview-content pre {
-		padding: var(--wp--preset--spacing--10);
-		background: var(--wp--preset--color--light-grey-2);
-	}
-
-	.wp-editor-area {
-		min-height: 240px;
-	}
-
-	.form-submit {
-		display: flex;
-		flex-direction: column;
-		gap: var(--wp--preset--spacing--10);
-	}
-
-	@media screen and (min-width: 550px) {
-		.form-submit {
-			align-items: center;
-			flex-direction: row;
-			justify-content: space-between;
-		}
-
-		.logged-in-as a {
-			text-decoration: underline;
-		}
-	}
 }
 
