--- a/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
@@ -205,7 +205,7 @@ body[class] {
 		right: 0;
 
 		li {
-			width: 50px;
+			min-width: 50px;
 		}
 
 		a {
